# sycl-examples

./: .gitignore
seissol-scripts/meshing/: generate.sh
vector-add/: CMakeLists.txt  my-env.txt
vector-add/src/: vector-add-usm.cpp
vector-add/src/lib/: lib-vector-add-usm.cpp  main.cpp
